Fix overflowing text in See Documentation button.

--- a/src/views/settings/styles/main.scss
+++ b/src/views/settings/styles/main.scss
@@ -281,7 +281,7 @@
     margin-left: 5px;
   }
   .settings-docs-button {
-    width: 163px;
+    min-width: 163px;
     text-align: left;
     padding: 10px;
   }
